fix bad project video embed size on mobile

--- a/react/site/src/client/app/views/project/projects_single_view.scss
+++ b/react/site/src/client/app/views/project/projects_single_view.scss
@@ -1,9 +1,17 @@
 @import '../../universal';
 
-@media (max-width: 575px) {
+@media (max-width: 374px) {
 	.videoLimiter {
-		width: 100%;
-		height: 80%;
+		width: 290px;
+		height: 162px;
+	}
+
+}
+
+@media (min-width: 375px) {
+	.videoLimiter {
+		width: 345px;
+		height: 193px;
 	}
 
 	.resumeRowHeader {
